--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOLJA - Investment Insights Marketplace</title>
+    <title>TOLJA - Launching Soon</title>
     <style>
         * {
             margin: 0;
@@ -199,9 +199,9 @@
         
         <div class="email-form">
             <form action="#" method="POST">
-                <input type="email" class="email-input" placeholder="Enter your email" required>
+                <input type="email" class="email-input" placeholder="Enter your email for launch notification" required>
                 <br>
-                <button type="submit" class="submit-btn">Get Early Access</button>
+                <button type="submit" class="submit-btn">Notify Me at Launch</button>
             </form>
         </div>
     </div>
