--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
     <div class="popup-overlay" id="popup">
         <div class="popup-content">
             <div class="popup-icon">✓</div>
-            <h2 class="popup-title">등록 완료!</h2>
+            <h2 class="popup-title">Successfully Registered!</h2>
             <p class="popup-message">
-                이메일이 성공적으로 등록되었습니다.<br>
-                런칭 시 알림을 보내드리겠습니다.<br><br>
-                감사합니다!
+                Your email has been successfully registered.<br>
+                We'll notify you when we launch.<br><br>
+                Thank you!
             </p>
-            <button class="popup-btn" onclick="closePopup()">확인</button>
+            <button class="popup-btn" onclick="closePopup()">Close</button>
         </div>
     </div>
     
